--- a/FTCollectorApp/View/SitesPage/DuctPage.xaml
+++ b/FTCollectorApp/View/SitesPage/DuctPage.xaml
@@ -17,14 +17,17 @@
                      <Label Text="Duct"  HorizontalOptions="Center" FontSize="Large" />
 
                     <Label Text="Duct "  />
-                        <Grid ColumnDefinitions="0.7*,0.1*" >
+                        <Grid ColumnDefinitions="0.7*,0.1*,0.1*" >
                             <local:Dropdown SelectedItem="{Binding SelectedDuctKey, Mode=TwoWay}"
                                         ItemDisplayBinding="{Binding ConduitKey}" 
                                         ItemsSource="{Binding DuctKeyList}" />
 
-                            <Button Grid.Column="1" Text="{x:Static fa:FontAwesomeIcons.List}"
+                            <Button Grid.Column="1" Text="{x:Static fa:FontAwesomeIcons.Recycle}"
                                    FontFamily="{StaticResource FontAwesomeSolid}" Command="{Binding RefreshDuctKeyListCommand}"
                                     />
+                            <Button Grid.Column="2" Text="{x:Static fa:FontAwesomeIcons.Trash}"
+                                   FontFamily="{StaticResource FontAwesomeSolid}" Command="{Binding RemoveDuctItemCommand}"
+                                    />                            
                         </Grid>
                     <Label Text="Host Tag Number "  />
                     <local:BorderColorEntry x:Name="txtHostTagNumber" Text="{Binding DefaultHostTagNumber}" IsEnabled="False"/>
