--- a/FTCollectorApp/View/TraceFiberPages/FiberOpticCablePage.xaml
+++ b/FTCollectorApp/View/TraceFiberPages/FiberOpticCablePage.xaml
@@ -9,14 +9,14 @@
         <StackLayout Padding="20">
             <Label Text="Fiber Optic Cable" FontSize="Large" HorizontalOptions="Center" WidthRequest="80" />
             <Label Text="Enter cable Id" HorizontalOptions="Start" />
-                <local:Dropdown x:Name="pCableId" HorizontalOptions="FillAndExpand" 
+                <Picker x:Name="pCableId" HorizontalOptions="FillAndExpand" 
                                 ItemsSource="{Binding aFiberCableList}"
                                 ItemDisplayBinding="{Binding CableIdDesc}"
-                                SelectedItem="{Binding SelectedFiberCable, Mode=TwoWay, FallbackValue=''}"
+                                SelectedItem="{Binding SelectedFiberCable, Mode=TwoWay}"
                                                             Title="Select  Fiber Cable"
                             TitleColor="Gray" />
                 <local:BorderEntry Placeholder="Enter cable id" PlaceholderColor="Gray" x:Name="nwCableName" IsVisible="false" 
-                                   Text="{Binding NewCableName, Mode=TwoWay,FallbackValue=''}">
+                                   Text="{Binding NewCableName, Mode=TwoWay}">
                     <Entry.Triggers>
 
                         <DataTrigger TargetType="Entry"
@@ -32,30 +32,34 @@
 
              <Label Text="Cable Type" HorizontalOptions="Start" />
              <!--<local:BorderColorEntry Text="{Binding SelectedFiberCable.CableIdDesc}" />-->
-                <local:Dropdown x:Name="pCableType" HorizontalOptions="FillAndExpand" Title="{Binding SelectedFiberCable.CableIdDesc}"
-                        SelectedItem="{Binding SelectedCableType, Mode=TwoWay, FallbackValue=''}"
+                <local:Dropdown x:Name="pCableType" HorizontalOptions="FillAndExpand" Title="{Binding SelectedFiberCable.CableTypeDesc}"
+                        SelectedItem="{Binding SelectedCableType, Mode=TwoWay}"
                         ItemsSource="{Binding CableTypeList}" 
                         ItemDisplayBinding="{Binding CodeCableDesc}" IsEnabled="{Binding NewFiber}"/>
                 <Label Text="Manufacturer" HorizontalOptions="Start" />
-            <local:Dropdown x:Name="pManufacturer" HorizontalOptions="FillAndExpand"
+            <Picker x:Name="pManufacturer" HorizontalOptions="FillAndExpand"
+                    
                             ItemsSource="{Binding ManufacturerList} " 
-                            SelectedItem="{Binding SelectedManufacturer, Mode=TwoWay, FallbackValue=''}"
+                            SelectedItem="{Binding SelectedManufacturer, Mode=TwoWay}"
                             ItemDisplayBinding="{Binding ManufName}"
                             Title="--Select  Manufacturer--"
                             TitleColor="Gray" />
                 <Label Text="Model" HorizontalOptions="Start" />
-            <local:Dropdown x:Name="pModel" 
+            <Picker x:Name="pModel" 
                            ItemsSource="{Binding ModelDetailList}" 
-                            SelectedItem="{Binding SelectedModelDetail, Mode=TwoWay, FallbackValue=''}"
+                            SelectedItem="{Binding SelectedModelDetail, Mode=TwoWay}"
                             ItemDisplayBinding="{Binding ModelNumber}"
                             HorizontalOptions="FillAndExpand"
                             Title="--Select  Model--"
                             TitleColor="Gray" />                            
             <Label Text="Enter Label" HorizontalOptions="Start" />
-            <local:BorderEntry x:Name="entryLabel" HorizontalOptions="FillAndExpand" Text="{Binding TextLabel, Mode=TwoWay}"/>
+            <local:BorderEntry x:Name="entryLabel" HorizontalOptions="FillAndExpand" Text="{Binding TextLabel, Mode=TwoWay}"
+                               Placeholder="{Binding SelectedFiberCable.label}" IsEnabled="{Binding NewFiber}"
+                               />
             <Label Text="Enter single-mode strand count" HorizontalOptions="Start"/>
                 <local:Dropdown x:Name="pSingleModeCount" WidthRequest="100"
-                        SelectedItem="{Binding SMCount, Mode=TwoWay}" >
+                        SelectedItem="{Binding SMCount, Mode=TwoWay}"  Title="{Binding SelectedFiberCable.SMCount}" IsEnabled="{Binding NewFiber}" >
+                    
                     <Picker.Items>
                         <x:String>2</x:String>
                         <x:String>6</x:String>
@@ -69,7 +73,7 @@
                 </local:Dropdown> 
             <Label Text="Enter multi-mode strand count" HorizontalOptions="Start"/>
                 <local:Dropdown x:Name="pMultiModeCount"  WidthRequest="100"
-                        SelectedItem="{Binding MMCount, Mode=TwoWay}" >
+                        SelectedItem="{Binding MMCount, Mode=TwoWay}" Title="{Binding SelectedFiberCable.MMCount}" IsEnabled="{Binding NewFiber}">
                     <Picker.Items>
                         <x:String>4</x:String>
                         <x:String>6</x:String>
@@ -83,7 +87,7 @@
                 </local:Dropdown>
             <Label Text="Enter buffer count" HorizontalOptions="Start"/>
                 <local:Dropdown x:Name="pBufferCount" WidthRequest="100"
-                        SelectedItem="{Binding SelectedBufferCnt, Mode=TwoWay}" >
+                        SelectedItem="{Binding SelectedBufferCnt, Mode=TwoWay}"   Title="{Binding SelectedFiberCable.buffer_count}" IsEnabled="{Binding NewFiber}" >
                     <Picker.Items>
                         <x:String>1</x:String>
                         <x:String>2</x:String>
@@ -115,6 +119,7 @@
                 <Label Text="Sheath Type" HorizontalOptions="Start" />
             <local:Dropdown x:Name="pSheathTpe" HorizontalOptions="FillAndExpand"
                             ItemsSource="{Binding SheathList}" 
+                            Title="{Binding SelectedFiberCable.SheathType}"
                             SelectedItem="{Binding SelectedSheath, Mode=TwoWay, FallbackValue=''}"
                             ItemDisplayBinding="{Binding SheathType}"/>
             <Label Text="Manufactured at" HorizontalOptions="Start" />
